# rscript

./: Cargo.toml  Plan.md  README.md  TODO.md  index.ts  test_check.ts
.github/workflows/: ci.yml
crates/rscript_ast/: Cargo.toml
crates/rscript_ast/src/: generated.rs  lib.rs  node.rs  syntax_kind.rs  types.rs  visitor.rs
crates/rscript_binder/: Cargo.toml
crates/rscript_binder/src/: binder.rs  lib.rs  scope.rs  symbol.rs
crates/rscript_binder/tests/: binder_tests.rs
crates/rscript_checker/: Cargo.toml
crates/rscript_checker/src/: checker.rs  lib.rs  types.rs
crates/rscript_checker/tests/: checker_tests.rs
crates/rscript_cli/: Cargo.toml
crates/rscript_cli/src/: main.rs
crates/rscript_compiler/: Cargo.toml
crates/rscript_compiler/benches/: compile_bench.rs
crates/rscript_compiler/src/: lib.rs
crates/rscript_compiler/tests/: conformance.rs  integration_tests.rs
crates/rscript_core/: Cargo.toml
crates/rscript_core/src/: arena.rs  collections.rs  intern.rs  lib.rs  text.rs
crates/rscript_diagnostics/: Cargo.toml
crates/rscript_diagnostics/src/: lib.rs
crates/rscript_emitter/: Cargo.toml
crates/rscript_emitter/src/: lib.rs
crates/rscript_evaluator/: Cargo.toml
crates/rscript_evaluator/src/: lib.rs
crates/rscript_ls/: Cargo.toml
crates/rscript_ls/src/: lib.rs
crates/rscript_lsp/: Cargo.toml
crates/rscript_lsp/src/: lib.rs
crates/rscript_module/: Cargo.toml
crates/rscript_module/src/: lib.rs
crates/rscript_nodebuilder/: Cargo.toml
crates/rscript_nodebuilder/src/: lib.rs
crates/rscript_parser/: Cargo.toml
crates/rscript_parser/benches/: parse_bench.rs
crates/rscript_parser/src/: lib.rs  parser.rs  precedence.rs  utilities.rs
crates/rscript_parser/tests/: parser_tests.rs
crates/rscript_printer/: Cargo.toml
crates/rscript_printer/src/: lib.rs
crates/rscript_scanner/: Cargo.toml
crates/rscript_scanner/src/: char_codes.rs  lib.rs  scanner.rs  token.rs
crates/rscript_scanner/tests/: scanner_tests.rs
crates/rscript_sourcemap/: Cargo.toml
crates/rscript_sourcemap/src/: lib.rs
crates/rscript_tests/: Cargo.toml
crates/rscript_tests/src/: lib.rs
crates/rscript_tests/tests/: conformance_tests.rs
crates/rscript_transformers/: Cargo.toml
crates/rscript_transformers/src/: lib.rs
crates/rscript_tsoptions/: Cargo.toml
crates/rscript_tsoptions/src/: lib.rs
crates/rscript_tspath/: Cargo.toml
crates/rscript_tspath/src/: lib.rs
tests/: conformance_tests.rs
tests/fixtures/: async_await.ts  basic.ts  classes.ts  decorators.ts  enums.ts  errors.ts  generics.ts  modules.ts  real_world_1.ts  real_world_2.ts  real_world_3.ts  types.ts
