[package]
name = "rscript_checker"
version.workspace = true
edition.workspace = true

[dependencies]
rscript_core = { workspace = true }
rscript_ast = { workspace = true }
rscript_diagnostics = { workspace = true }
rscript_binder = { workspace = true }
rscript_evaluator = { workspace = true }
rustc-hash = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
bumpalo = { workspace = true }
rscript_parser = { workspace = true }
