[package]
name = "rscript_compiler"
version.workspace = true
edition.workspace = true

[dependencies]
rscript_core = { workspace = true }
rscript_ast = { workspace = true }
rscript_diagnostics = { workspace = true }
rscript_scanner = { workspace = true }
rscript_parser = { workspace = true }
rscript_binder = { workspace = true }
rscript_checker = { workspace = true }
rscript_emitter = { workspace = true }
rscript_module = { workspace = true }
rscript_tsoptions = { workspace = true }
rscript_tspath = { workspace = true }
rayon = { workspace = true }
bumpalo = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "compile_bench"
harness = false
