[package]
name = "rscript_ls"
version.workspace = true
edition.workspace = true

[dependencies]
rscript_core = { workspace = true }
rscript_ast = { workspace = true }
rscript_binder = { workspace = true }
rscript_checker = { workspace = true }
rscript_parser = { workspace = true }
rscript_compiler = { workspace = true }
rscript_diagnostics = { workspace = true }
bumpalo = { workspace = true }
