[package]
name = "rscript_parser"
version.workspace = true
edition.workspace = true

[dependencies]
rscript_core = { workspace = true }
rscript_ast = { workspace = true }
rscript_scanner = { workspace = true }
rscript_diagnostics = { workspace = true }
bumpalo = { workspace = true }
lasso = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parse_bench"
harness = false
