[package]
name = "rscript_tsoptions"
version.workspace = true
edition.workspace = true

[dependencies]
rscript_core = { workspace = true }
rscript_ast = { workspace = true }
rscript_tspath = { workspace = true }
rscript_diagnostics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
